tests/fixtures/invalid/bytes_rshift_set.py
# Cannot right shift Bytes and Set[int]
x: bytes = b"hello" >> {1, 2, 3}
